# anytype-flake

./: .gitignore  0001-remove-amplitide-analytics.patch  0001-remove-amplitude-analytics.patch  LICENSE  README.md  anytype-heart-bin.nix  anytype-heart-src.json  anytype-heart-src.nix  anytype-heart.nix  anytype-protobuf.nix  anytype-protos-js.nix  anytype-ts-deps.json  anytype-ts-src.json  anytype-ts-src.nix  anytype.desktop  anytype.nix  flake.nix  freshen.json  test.nix
anytype/: 0001-remove-analytics.patch  0002-fix-server-path.patch  default.nix  deps.json  src-patched.json  src.json  src.nix  test.nix
anytype-heart/: 0001-remove-amplitude-analytics.patch  bin.json  bin.nix  default.nix  src.json  src.nix  vendorHash.json
anytype-protos-js/: default.nix
fix-lockfile/: default.nix  fix-lockfile.py
libtantivy-go/: build.patch  default.nix  src.json  src.nix
protoc-gen-js/: default.nix
remove-telemetry-deps/: default.nix  remove-telemetry-deps.py
scripts/: ci.sh
update/: Main.hs  Prefetch.hs  cabal2nix.sh  default.nix  fourmolu.yaml  unwrapped.nix  update.cabal
